<resources>
    <string name="app_name">E-POSYANDU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background_login">background_login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="logo_login">logo_login</string>
    <string name="sistem_informasi_pelayanan_monitoring_anak_di_posyandu">Sistem Informasi Pelayanan Monitoring Anak Di Posyandu</string>
    <string name="admin_admin_com">admin@admin.com</string>
    <string name="keluar">Keluar</string>
    <string name="customtabimage">customTabImage</string>
    <string name="scan_ktp">Scan KTP</string>
    <string name="tempelkan_ktp_dibelakang_perangkat">Tempelkan KTP dibelakang perangkat</string>
    <string name="account_logo">account logo</string>
    <string name="ketik_nama_anak">Ketik nama anak</string>
    <string name="nfc_pic">nfc_pic</string>
    <string name="pasien">Pasien</string>
    <string name="posyandu">Posyandu</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="anak">Anak</string>
    <string name="cari">Cari</string>
    <string name="id_nfc_31431243245">ID_NFC : 31431243245</string>
    <string name="tambah_data_baru">Tambah Data Baru</string>
    <string name="nik">NIK</string>
    <string name="nama_orang_tua">Nama Orang Tua</string>
    <string name="tanggal_lahir_orang_tua">Tanggal Lahir Orang tua</string>
    <string name="data_anak">Data Anak</string>
    <string name="nik_anak">NIK Anak</string>
    <string name="jenis_kelamin_anak">Jenis Kelamin Anak</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tanggal_lahir_anak">Tanggal Lahir Anak</string>
    <string name="berat_badan_lahir">Berat Badan Lahir</string>
    <string name="tinggi_badan_lahir">Tinggi Badan Lahir</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="nama_anak">Nama Anak</string>
    <string name="tab_title">tab_title</string>
    <string name="id_nfc">ID NFC</string>
    <string name="data_orang_tau">Data orang tua</string>
    <string name="simpan">Simpan</string>
    <string name="ktp_tidak_terdaftar_di_wilayah_depok">KTP tidak terdaftar di wilayah Depok</string>
    <string name="_123123123">123123123</string>
    <string name="tambah_data_anak">Tambah Data Anak</string>
    <string name="_123124832978">123124832978</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="_2019_10_10">2019–10-10</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="_40_kg">40 Kg</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="_150_cm">150 Cm</string>
    <string name="ya">Ya</string>
    <string name="asi_eksklusif">Asi Eksklusif</string>
    <string name="kg">Kg</string>
    <string name="cm">Cm</string>
    <string name="jajang_miharja">Jajang miharja</string>
    <string name="status_berat_badan">Status Berat Badan</string>
    <string name="naik">Naik</string>
    <string name="update_data">Update Data</string>
    <string name="tinggi_badan_saat_ini">Tinggi Badan Saat ini</string>
    <string name="berat_badan_saat_ini">Berat Badan Saat ini</string>
    <string name="memuat">memuat...</string>
    <string name="history_anak">History Anak :</string>
    <string name="clickable">clickable</string>
    <string name="contoh_input_berat_badan_10_5">Contoh Input Berat Badan : 10.5</string>
    <string name="contoh_input_tinggi_badan_120_25">Contoh Input Tinggi Badan : 120.25</string>
    <string name="_1_tahun_3_bulan_10_hari">1 tahun 3 bulan 10 hari</string>
    <string name="pilih_imunisasi_yang_ingin_diberikan">Pilih <b>IMUNISASI</b> yang ingin diberikan:</string>
    <string name="pilih_vitamin_yang_ingin_diberikan">Pilih <b>VITAMIN</b> yang ingin diberikan:</string>
</resources>
