<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.UpdateFragment.UpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textUpdateNamaAnak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nama_anak"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textUpdateUsiaAnak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/_1_tahun_3_bulan_10_hari"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/textUpdateNamaOrtu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nama_orang_tua"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutBeratBadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutBeratBadan"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="6">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtUpdateBeratBadanAnak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/berat_badan_saat_ini"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textKg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:maxLength="3"
                    android:text="@string/kg"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/contoh_input_berat_badan_10_5"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="6">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtUpdateTinggiBadanAnak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tinggi_badan_saat_ini"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textCm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:maxLength="3"
                    android:text="@string/cm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contoh_input_tinggi_badan_120_25"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">
            <Button
                android:id="@+id/btnUpdateBatalkan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF1100"
                android:textColor="@color/white"
                android:text="Batalkan"/>
        <Button
            android:id="@+id/btnUpdateData"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="#4fbfa5"
            android:text="@string/update_data"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>