<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SplashScreen.SplashScreenActivity">


    <ImageView
        android:contentDescription="@string/background_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_android"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_50sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="#2B3E91"
        android:text="@string/sistem_informasi_pelayanan_monitoring_anak_di_posyandu"/>
</RelativeLayout>