<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UI.TambahAnakFragment.TambahAnakFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tambah_data_anak"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/grey" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFormNIKAnak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nik_anak"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFormNamaAnak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_anak" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:padding="5dp"
                android:text="@string/jenis_kelamin_anak" />

            <RadioGroup
                android:id="@+id/rgFormKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <RadioButton
                    android:id="@+id/rbFormLaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/laki_laki" />

                <RadioButton
                    android:id="@+id/rbFormPerempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perempuan" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFormTanggalLahirAnak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_today"
                    android:drawableLeft="@drawable/ic_today"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/tanggal_lahir_anak" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutBeratBadan"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtFormBeratBadanAnak"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/berat_badan_lahir"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textKg"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:maxLength="3"
                        android:text="@string/kg"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtFormTinggiBadanAnak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tinggi_badan_lahir"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textCm"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:maxLength="3"
                    android:text="@string/cm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkboxFormAsiEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/asi_eksklusif" />

            <Button
                android:id="@+id/btnFormTambahData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rectangle_blue"
                android:text="@string/tambah_data"
                android:textColor="@color/white" />

        </LinearLayout>


        <!--<View-->
        <!--android:layout_margin="10dp"-->
        <!--android:id="@+id/close"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="3dp"-->
        <!--android:background="@color/grey"-->
        <!--android:layout_centerHorizontal="true"/>-->

    </RelativeLayout>
</ScrollView>