<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.MainActivity.FragmentTab.PendaftaranFragment">

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/searchPendaftaranNamaAnak"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:imeOptions="actionDone"
            style="@style/Widget.AppCompat.SearchView"
            android:inputType="text"
            android:background="@drawable/rectangle_search"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/ketik_nama_anak"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_search"
            android:padding="10dp"/>


        <Button
            android:id="@+id/btnPendaftaranCari"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_blue"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="#fff"
            android:text="@string/cari"/>
    </LinearLayout>


    <LinearLayout
        android:layout_below="@+id/layoutSearch"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_blue_nfc">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_65sdp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_nfc"
            android:contentDescription="@string/nfc_pic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_ktp"
            android:textSize="24sp"
            android:textColor="#000"
            android:textAlignment="center"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/tempelkan_ktp_dibelakang_perangkat"
            android:padding="5dp"
            android:layout_marginBottom="5dp"/>
        <!--<Button-->
            <!--android:id="@+id/scanKTP"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/scan_ktp"/>-->
    </LinearLayout>

</RelativeLayout>